--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -106,7 +106,7 @@
 
   <!-- バケツ -->
   <div id="bucket">
-    <img id="bucketImg" src="./public/bucket.png" alt="bucket">
+    <img id="bucketImg" src="./public/bucket.png.png" alt="bucket">
     <div id="counter">0</div>
   </div>
 
